# Track23

./: Camera Viewer.txt  Car Command Stack..txt  Dockerfile  Dockerfile R2 Viz  Dockerfile-Viz-Humble  Dockerfile-viz-r2-humble  Drive Car.txt  README.md  Testme.txt.txt  Viz2.sh  Viz_Bringup.sh  powershell launch.txt
3D Modelling/: Aruco Holder.stl  Camera Alignment Pads.3mf  Random Bits.3mf  Room Dimensions v1.f3d  rotary hinge.stl
3D Modelling/Lidar Barrier Stuff/: Spaced Double HD Solid.stl
3D Modelling/Lights/: Light Back Cover.stl  Light Lens V1.stl  Light Main Body.stl  Light V2 Lens.stl  Lights With Pattern.3mf  Pattern 1 Main.stl  Pattern 2.stl  Pattern 3.stl  Pattern 4.stl  Pattern 5.stl  Pattern 6.stl  Pattern 7.stl
3D Modelling/Marker Chips/: 4 Way Top.stl  4 Way base.stl  Roundabout Base.stl  Roundabout Top.stl
3D Modelling/Signs/: 4 Back painted Stop.3mf  4 Yield Sign back painted.3mf  Sign Holder (YIELD).stl  Sign Holder Top Hole.stl  Sign Holder v1.stl  Sign Holders.3mf  Sop+Yield Back Painted.3mf  Stop Sign With Mount.3mf  Stop Sign With Mount.stl  Stop Sign v2.stl  Stop Signs.3mf  Yield Sign + Holder.3mf  Yield Sign Holder Top Hole.stl  Yield Sign.stl
3D Modelling/Tools and Jigs/: Pencil Sharpener v1.stl
3D Modelling/Train Crossing/: Back Cover.stl  Chip Body.stl  RR Holder With Post.stl  Railroad Barrier Arm Red Parts.stl  Railroad Barrier Arm, Monochrome.stl  Railroad Barrier Arm.stl  Servo Body.stl  Servo Holder new.3mf  Top Cover.stl
Car Commands/: Car Command Stack..txt  Lane Follower.txt  Object Tracker.txt  Photo Capture.txt
CoreRaspberry/: Rebuild.sh  Runtime.txt
CoreRaspberry/control/: light_states.txt  light_states_4.txt  light_states_readme.txt  states_readme.txt  train_states.txt
CoreRaspberry/example_package/: package.xml
CoreRaspberry/install/: local_setup.sh  setup.sh
CoreRaspberry/log/: latest_build
CoreRaspberry/ros_ws/four_way_publisher/: CMakeLists.txt  package.xml
CoreRaspberry/ros_ws/stoplight_serial/: Build commands.txt  CMakeLists.txt  package.xml  pi_stoplight.py
CoreRaspberry/src/custom_msgs/: CMakeLists.txt  package copy.xml  package.xml
CoreRaspberry/src/custom_msgs/msg/: MarkerLoc.msg  WorldMarkers.msg
CoreRaspberry/src/direct_io/: CMakeLists.txt  package.xml  setup.cfg  setup.py
CoreRaspberry/src/direct_io/direct_io/: direct_light.py  direct_master.py  direct_servo.py  esp_serial.py  testpub.py
CoreRaspberry/src/rqt_plugs/: CMakeLists.txt  package.xml  setup.py
CoreRaspberry/src/rqt_plugs/rqt_plugs/: four_way_rqt  four_way_rqt.py
CoreRaspberry/src/world_gen/: CMakeLists.txt  CMakeLists_ignore.txt  package.xml  setup.py
CoreRaspberry/src/world_gen/launch/: all_launch_viewer.py  all_viewer_launch.py  circle_odom_launch.py  lights_launch_viewer.py  lights_viewer_launch.py  track_launch.py  train_launch.py  train_launch_viewer.py  train_viewer_launch.py  transform_launch.py  world_circle_launch.py  world_viewer_launch.py  world_viewer_launch_full.py
CoreRaspberry/src/world_gen/msg/: world_marker_msg.msg
CoreRaspberry/src/world_gen/rviz/: config1.rviz  config_lights.rviz  config_train.rviz  config_train_lights.rviz
CoreRaspberry/src/world_gen/world_gen/: FourWayViz.py  __init__.py  color_publisher.py  dragon.py  four_way_marker copy.py  four_way_marker.py  gen.py  gen_v2.py  open_world_data.py  parse_and_pass.py  stop_sign.py  test.py  three_way_marker.py  three_way_marker_V2.py  three_way_marker_old.py  train_marker.py  yield_sign.py
CoreRaspberry/src/world_gen/world_gen/markers/: 4_way_poses_light_a.txt  4_way_poses_light_b.txt  4_way_poses_light_c.txt  4_way_poses_light_d.txt  light.dae  light.stl  stop.dae  train_barrier.dae  yield.dae
CoreRaspberry/src/world_gen/world_gen/worlds/: four_way_marker_old.py  test.dae  test2.dae
CoreRaspberry/src/world_gen/world_gen/worlds/markers/: Light Main Body.stl
CoreRaspberry/src/x_core/: CMakeLists_ignore.txt  package.xml  setup.cfg  setup.py
CoreRaspberry/src/x_core/x_core/: pub.py
CoreRaspberry/worlds/: Long_4_way.dae  Long_4_way_marker_loc.txt  Long_4_way_markers.txt  Long_oval.dae  Long_roundabout.dae  Long_roundabout_markers.txt  Medium_4_way.dae  Medium_4_way_marker_loc.txt  Medium_4_way_markers.txt  Medium_roundabout.dae  Medium_roundabout_marker_loc.txt  Small_4_way.dae  Small_4_way.txt  Small_4_way_marker_loc.txt  Small_oval_v2.dae  Small_oval_v2_marker_loc.txt  Small_oval_v2_markers.txt  Small_roundabout.dae  Small_roundabout_marker_loc.txt  Small_roundabout_markers.txt  oval_test_marker_loc.txt  oval_test_markers.txt  signpose.txt  small_oval_marker_loc.txt  small_oval_markers.txt  template.txt  test.txt  test2.txt  test2_marker_loc.txt  test2_markers.txt  world_select.txt
Documentation/: Packages Overview.docx  Setup Manual.docx  Technical Design Document.docx
Fusion Export/F/: _1&#47;16 with peg.d7ab0e21-c09a-454f-81c9-e7a8ccdaed1f.pim.xx  _1&#47;4 20 Knob.9a38aba4-7fe4-43cf-abb1-e478ecce4c44.pim.xx  _1-5 (Entrance).219effff-f473-44bc-a75d-e1218fa6c62f.f3d  _1-5 (Entrance).219effff-f473-44bc-a75d-e1218fa6c62f.f3d._xx  _1-5 (Entrance).922a9380-cdaf-486c-86eb-b796c98b9d1c.f3d._xx  _1-5 (Entrance).d2b125fc-16cf-42d4-bfd9-f85618610363.f3d  _1-5 (Entrance).d2b125fc-16cf-42d4-bfd9-f85618610363.f3d._xx  _1-5 (Entrance).f14e25fd-0882-4651-ac76-9a55d00054ed.f3d  _1-5 (Entrance).f14e25fd-0882-4651-ac76-9a55d00054ed.f3d._xx  _10-16 (4-Way).ce05d46f-5f67-4321-aa04-e0567a5c2ecf.f3d  (+524 more)
Other Code/: follow_line_4ROS_R2.py  garbagebin.py  hsv_2win.py  hsv_3win.py  hsv_selector.py  hsv_v2.py  line follower changes.py  line_follower_modded.py  testing.py  webcam_capture.py
Setup_Files/: Pi Config Files.txt  Raspberry Pi Software.txt  base-install.sh  control-install.sh  pi_config.sh  ros-humble-std.sh
World Meshes/: Full Oval Export Testing v1.mtl  Full Oval Export Testing v2.mtl  Small Oval v2.mtl  Yield, Sign only.mtl  Zero Pose Marker v1.mtl
four_way_light_ex/: package.xml  setup.py
linux commands/: Rebuild.sh  Viz_Bringup.sh  new_viz_image.sh  newterm.sh  pull.sh
yolov5/: Yolo5_train_test.py  Yolo5_train_test_vid.py
(+602 files in other folders)
