<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>world_gen</name>
  <version>0.0.0</version>
  <description>generates world vizualizations for RVIZ</description>
  <maintainer email="iantheterror4@gmail.com">Ian M</maintainer>
  <license>TODO</license>

 <!-- <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend> -->
  
  <exec_depend>launch</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>core_functions</exec_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>